# WHFM

./: .gitignore  AGENTS.md  README.md  __init__.py  bridge.py  config.py  couplings.py  datasets.py  directions.py  evaluation.py  example_helpers.py  flow_matching.py  gaussian_paths.py  losses.py  node.py  pyproject.toml  requirements.txt  runner-requirements.txt  sweep.py  train.py  trainer.py  trainer_v2.py
Potentials/: __init__.py  configured_potential.py  interaction_potentials.py  internal_potentials.py  schedules.py
checks/: check_entropy_internal.py
configs/: train.yaml  train_v2.yaml
configs/problems/: coulomb_roots.yaml  duffing_double_well_2d.yaml  fixed_three_body.yaml  gmm_interaction.yaml  grid_spring.yaml  hf_double_well.yaml  stunnel.yaml  stunnel_interaction.yaml  vneck_entropy.yaml
configs/sweeps/: coulomb_seed_sweep_v2.yaml  fixed_three_body_v2.yaml  stunnel_seed_sweep.yaml  (+5 more)
evaluation/: __init__.py  animate.py  distribution.py  gaussian_bridge_plot.py  io.py  model.py  plotting.py  postprocess.py
examples/: 2_particles_spring.ipynb  coulomb_roots_bridge_v0.ipynb  duffing_double_well_2d.ipynb  fixed_three_body_bridge_v0.ipynb  hf_double_well.ipynb  hf_entropy.ipynb  hf_entropy_mnist.ipynb  hf_harmonic.ipynb  hf_hill.ipynb  hf_interaction.ipynb  hf_obstacle.ipynb  hf_stunnel.ipynb  hf_stunnel_interaction.ipynb  hf_stunnel_interaction_experiment.py  k_particles_spring.ipynb  stunnel.ipynb  stunnel_fwd_bwd.ipynb  test_ms_solver.ipynb
tests/: test_evaluation_postprocess.py  test_package_installability.py  test_rectification_optimizer_reset.py
(+64 files in other folders)
